Fix unsupported gap css in safari

--- a/src/containers/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/containers/Profile/ProfileInfo/ProfileInfo.scss
@@ -1,7 +1,6 @@
 .ProfileInfo {
   &__account-details {
     display: flex;
-    gap: 11px;
     padding-top: 18px;
   }
 
@@ -23,6 +22,7 @@
 
   &__CopyableAccountNumber {
     flex: 1;
+    margin-right: 11px;
   }
 
   .CopyableAccountNumber {
@@ -67,18 +67,29 @@
   &__member-github {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+  }
+
+  &__member-github-icon {
+    margin-right: 10px;
   }
 
   &__member-slack {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+  }
+
+  &__member-slack-icon {
+    margin-right: 10px;
+  }
+
+  &__member-title {
+    margin-bottom: 10px;
   }
 
   &__name {
     font-size: var(--font-size-medium);
     font-weight: 701;
+    margin-bottom: 10px;
   }
 
   &__profile-picture {
@@ -102,7 +113,6 @@
     border-bottom: 1px solid var(--color-sail-gray-100);
     display: flex;
     flex-direction: column;
-    gap: 10px;
     padding-bottom: 18px;
   }
 }
